--- a/src/Mod/Sketcher/Gui/Resources/Sketcher.qrc
+++ b/src/Mod/Sketcher/Gui/Resources/Sketcher.qrc
@@ -58,6 +58,7 @@
         <file>icons/Sketcher_CreatePoint.svg</file>
         <file>icons/Sketcher_CreatePolyline.svg</file>
         <file>icons/Sketcher_CreateRectangle.svg</file>
+        <file>icons/Sketcher_CreateSlot.svg</file>
         <file>icons/Sketcher_CreateFillet.svg</file>
         <file>icons/Sketcher_CreateText.svg</file>
         <file>icons/Sketcher_DraftLine.svg</file>
